# $Id: Makefile.am 24877 2006-08-18 17:41:19Z mej $

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src themes utils doc bg pix

EXTRA_DIST = LICENSE README ReleaseNotes ReleaseNotes.1 CVS-README ChangeLog autogen.sh Eterm.spec
MAINTAINERCLEANFILES = Makefile.in *~ aclocal.m4 config.guess config.sub configure depcomp \
    install-sh ltconfig ltmain.sh missing mkinstalldirs stamp-h* *.log config.h.in
